--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "elm",
+  "name": "tzo",
   "version": "2.0.1",
-  "description": "vue2-elm",
-  "author": "cangdu <1264889788@qq.com>",
+  "description": "vue2-tzo",
+  "author": "liduopie",
   "private": true,
   "license": "GPL",
   "scripts": {
