--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "showdown": "^1.7.1",
     "vue": "^2.3.4",
     "vue-router": "^2.6.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "weixin-js-sdk": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
