--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "iscroll": "^5.2.0",
     "showdown": "^1.7.1",
     "vue": "^2.3.4",
+    "vue-amap": "^0.3.0",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1",
     "weixin-js-sdk": "^1.2.0"
